Moving over to mass_spec_utils package

--- a/experimental/ComputeOptimalResults.ipynb
+++ b/experimental/ComputeOptimalResults.ipynb
@@ -73,7 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ms2_matching import load_picked_boxes,MZMLFile\n",
+    "from mass_spec_utils.data_import.mzml import MZMLFile\n",
+    "from mass_spec_utils.data_import.mzmine import load_picked_boxes,map_boxes_to_scans\n",
     "from vimms.Roi import Roi"
    ]
   },
@@ -742,7 +743,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ms2_matching import MZMLFile"
+    "from mass_spec_utils.data_import.mzml import MZMLFile"
    ]
   },
   {
@@ -900,6 +901,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
