--- a/experimental/MakeGraph.ipynb
+++ b/experimental/MakeGraph.ipynb
@@ -73,7 +73,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ms2_matching import load_picked_boxes,MZMLFile\n",
+    "from mass_spec_utils.data_import.mzml import MZMLFile\n",
+    "from mass_spec_utils.data_import.mzmine import load_picked_boxes\n",
     "from vimms.Roi import Roi"
    ]
   },
@@ -690,7 +691,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ms2_matching import MZMLFile"
+    "from mass_spec_utils.data_import.mzml import MZMLFile"
    ]
   },
   {
@@ -848,6 +849,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
