--- a/experimental/OptimalController.ipynb
+++ b/experimental/OptimalController.ipynb
@@ -257,7 +257,8 @@
     }
    ],
    "source": [
-    "from ms2_matching import MZMLFile,load_picked_boxes,map_boxes_to_scans\n",
+    "from mass_spec_utils.data_import.mzml import MZMLFile\n",
+    "from mass_spec_utils.data_import.mzmine import load_picked_boxes, map_boxes_to_scans\n",
     "peak_csv_file = os.path.join(test_path,'QCB/qcb_pp.csv')\n",
     "boxes = load_picked_boxes(peak_csv_file)\n",
     "print(len(boxes))"
@@ -516,7 +517,8 @@
     }
    ],
    "source": [
-    "from ms2_matching import MZMLFile,load_picked_boxes,map_boxes_to_scans\n",
+    "from mass_spec_utils.data_import.mzml import MZMLFile\n",
+    "from mass_spec_utils.data_import.mzmine import load_picked_boxes, map_boxes_to_scans\n",
     "peak_csv_file = os.path.join(test_path,'QCA','qca_pp.csv')\n",
     "boxes = load_picked_boxes(peak_csv_file)\n",
     "\n",
@@ -871,6 +873,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
