--- a/experimental/Analysis_data_20200503.ipynb
+++ b/experimental/Analysis_data_20200503.ipynb
@@ -63,7 +63,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ms2_matching import MZMLFile\n",
+    "from mass_spec_utils.data_import.mzml import MZMLFile\n",
     "qca_full = MZMLFile(qca_file)"
    ]
   },
@@ -284,7 +284,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ms2_matching import load_picked_boxes\n",
+    "from mass_spec_utils.data_import.mzmine import load_picked_boxes\n",
     "boxes = load_picked_boxes(pp_file)"
    ]
   },
@@ -367,7 +367,7 @@
     }
    ],
    "source": [
-    "from ms2_matching import map_boxes_to_scans\n",
+    "from mass_spec_utils.data_import.mzmine import map_boxes_to_scans\n",
     "topn_s2b,topn_b2s = map_boxes_to_scans(topn_file_obj,boxes,half_isolation_window=0)\n",
     "roi_s2b,roi_b2s = map_boxes_to_scans(roi_file_obj,boxes,half_isolation_window=0)\n",
     "print(len(topn_b2s))\n",
@@ -388,7 +388,7 @@
    "outputs": [],
    "source": [
     "pp_file = os.path.join(root,'from_controller_TopN_QCA_pp.csv')\n",
-    "from ms2_matching import load_picked_boxes\n",
+    "from mass_spec_utils.data_import.mzmine import load_picked_boxes\n",
     "boxes = load_picked_boxes(pp_file)"
    ]
   },
@@ -923,6 +923,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.9"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
