--- a/experimental/CompareWithOptimal.ipynb
+++ b/experimental/CompareWithOptimal.ipynb
@@ -57,7 +57,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ms2_matching import MZMLFile,load_picked_boxes,map_boxes_to_scans\n",
+    "from mass_spec_utils.data_import.mzml import MZMLFile\n",
+    "from mass_spec_utils.data_import.mzmine import load_picked_boxes,map_boxes_to_scans\n",
     "from vimms.Roi import make_roi"
    ]
   },
@@ -524,6 +525,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
