--- a/experimental/simon_simulator.ipynb
+++ b/experimental/simon_simulator.ipynb
@@ -1211,7 +1211,7 @@
    ],
    "source": [
     "sys.path.append('/Users/simon/git/pymzm')\n",
-    "from ms2_matching import MZMLFile\n",
+    "from mass_spec_utils.data_import.mzml import MZMLFile\n",
     "topn_mz_file = MZMLFile(topn_file)\n",
     "roi_mz_file = MZMLFile(roi_file)\n",
     "smart_mz_file = MZMLFile(smart_file)"
@@ -1331,7 +1331,7 @@
    "source": [
     "# Test with the picked peaks\n",
     "\n",
-    "- This code uses a method called `load_picked_boxes` and one called `map_boxes_to_scans` from my pymzm repository (in `ms2_matching.py`)\n",
+    "- This code uses a method called `load_picked_boxes` and one called `map_boxes_to_scans` from my mass_spec_utils repository (in `mzmine.py`)\n",
     "- Load picked boxes loads the peak *boxes* from the output of mzmine (i.e. min/max mz, min/max rt)\n",
     "- Map boxes to scans takes an MZMLFile object (also from the pymzm repo) and maps the ms2 scans to the boxes (and vice versa). Note that this method was originally designed to map scans to any box they overlap with (i.e. any box where the precursor plus or minus isolation intersected the box). This can be *switched off* by setting the isolation with to zero. Now, it will only find things where the precursor mz is in the box (and RT is ok, obviously)\n",
     "- We can then simply see how many of the boxes are associated with scans and this tells us how many picked peaks have scans"
@@ -1352,7 +1352,7 @@
    ],
    "source": [
     "# test with picked peaks\n",
-    "from ms2_matching import MZMLFile\n",
+    "from mass_spec_utils.data_import.mzml import MZMLFile\n",
     "\n",
     "# Big differences between the following two files!\n",
     "# perhaps an alignment thing...\n",
@@ -1360,7 +1360,7 @@
     "# peak_csv_file = os.path.join(qcb_dir,'QCB_22May19_1_pp.csv') \n",
     "peak_csv_file = os.path.join(test_path,'QCB','qcb_pp_wide.csv')\n",
     "\n",
-    "from ms2_matching import load_picked_boxes,map_boxes_to_scans\n",
+    "from mass_spec_utils.data_import.mzmine import load_picked_boxes,map_boxes_to_scans\n",
     "boxes = load_picked_boxes(peak_csv_file)"
    ]
   },
@@ -2327,7 +2327,8 @@
    ],
    "source": [
     "# test with picked peaks\n",
-    "from ms2_matching import MZMLFile,load_picked_boxes,map_boxes_to_scans\n",
+    "from mass_spec_utils.data_import.mzml import MZMLFile\n",
+    "from mass_spec_utils.data_import.mzmine import load_picked_boxes, map_boxes_to_scans\n",
     "peak_csv_file = os.path.join(test_path,'QCA','qca_pp_wide.csv')\n",
     "boxes = load_picked_boxes(peak_csv_file)"
    ]
@@ -2933,6 +2934,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
