updated file locations and loading in methods examples

--- a/demo/02. Methods/01. Full Scan.ipynb
+++ b/demo/02. Methods/01. Full Scan.ipynb
@@ -78,9 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data')\n",
-    "dataset = load_obj(os.path.join(data_dir, 'QCA_22May19_1.p'))\n",
-    "ps = load_obj(os.path.join(data_dir, 'ps.p'))"
+    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data','example_data')\n",
+    "dataset = load_obj(os.path.join(data_dir, 'beers', 'datasets', 'beer_1.p'))\n",
+    "ps = load_obj(os.path.join(data_dir, 'peak_sampler_mz_rt_int_19_beers_fragmentation.p'))"
    ]
   },
   {
@@ -120,7 +120,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1441.108s) ms_level=1: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.4120357115173/1440 [00:04<00:00, 334.07it/s]\n"
+      "(1440.128s) ms_level=1: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8075199999957/1440 [01:43<00:00, 13.87it/s]\n"
      ]
     }
    ],
@@ -151,15 +151,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-16 17:38:59.643 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\ms1_controller.mzML\n",
-      "2020-07-16 17:41:50.515 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-07-17 16:36:37.133 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\ms1_controller.mzML\n",
+      "2020-07-17 16:36:37.135 | INFO     | vimms.Common:create_if_not_exist:48 - Created C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\n",
+      "2020-07-17 16:39:34.581 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
      ]
     }
    ],
    "source": [
     "set_log_level_debug()\n",
     "mzml_filename = 'ms1_controller.mzML'\n",
-    "env.write_mzML(os.getcwd(), mzml_filename)"
+    "out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "env.write_mzML(out_dir, mzml_filename)"
    ]
   }
  ],
