--- a/demo/02. Methods/02. Top N.ipynb
+++ b/demo/02. Methods/02. Top N.ipynb
@@ -78,9 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data')\n",
-    "dataset = load_obj(os.path.join(data_dir, 'QCA_22May19_1.p'))\n",
-    "ps = load_obj(os.path.join(data_dir, 'ps.p'))"
+    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data','example_data')\n",
+    "dataset = load_obj(os.path.join(data_dir, 'beers', 'datasets', 'beer_1.p'))\n",
+    "ps = load_obj(os.path.join(data_dir, 'peak_sampler_mz_rt_int_19_beers_fragmentation.p'))"
    ]
   },
   {
@@ -133,7 +133,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.053s) ms_level=1 N=3 DEW=15: 100%|████████████████████████████████████████████████████████████████████████████████████████████████▉| 1438.324604670297/1440 [00:10<00:00, 140.10it/s]\n"
+      "(1440.130s) ms_level=2 N=3 DEW=15: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.9968469999974/1440 [02:33<00:00,  9.36it/s]\n"
      ]
     }
    ],
@@ -164,15 +164,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-16 18:46:06.041 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\topn_controller.mzML\n",
-      "2020-07-16 18:46:11.428 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-07-17 16:47:05.549 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\topn_controller.mzML\n",
+      "2020-07-17 16:49:59.376 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
      ]
     }
    ],
    "source": [
     "set_log_level_debug()\n",
     "mzml_filename = 'topn_controller.mzML'\n",
-    "env.write_mzML(os.getcwd(), mzml_filename)"
+    "out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "env.write_mzML(out_dir, mzml_filename)"
    ]
   },
   {
@@ -226,7 +227,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.162s) ms_level=1 N=20 DEW=120: 100%|█████████████████████████████████████████████████████████████████████████████████████████████▉| 1438.4216635970445/1440 [00:10<00:00, 133.85it/s]\n"
+      "(1440.055s) ms_level=1 N=20 DEW=120: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.7351859999885/1440 [02:50<00:00,  8.46it/s]\n"
      ]
     }
    ],
@@ -257,15 +258,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-16 18:46:22.743 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\topnvaried_controller.mzML\n",
-      "2020-07-16 18:46:26.360 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-07-17 16:52:50.130 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\topnvaried_controller.mzML\n",
+      "2020-07-17 16:52:57.556 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
      ]
     }
    ],
    "source": [
     "set_log_level_debug()\n",
     "mzml_filename = 'topnvaried_controller.mzML'\n",
-    "env.write_mzML(os.getcwd(), mzml_filename)"
+    "out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "env.write_mzML(out_dir, mzml_filename)"
    ]
   }
  ],
