--- a/demo/02. Methods/03. DIA.ipynb
+++ b/demo/02. Methods/03. DIA.ipynb
@@ -78,9 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data')\n",
-    "dataset = load_obj(os.path.join(data_dir, 'QCA_22May19_1.p'))\n",
-    "ps = load_obj(os.path.join(data_dir, 'ps.p'))"
+    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data','example_data')\n",
+    "dataset = load_obj(os.path.join(data_dir, 'beers', 'datasets', 'beer_1.p'))\n",
+    "ps = load_obj(os.path.join(data_dir, 'peak_sampler_mz_rt_int_19_beers_fragmentation.p'))"
    ]
   },
   {
@@ -362,7 +362,8 @@
    "source": [
     "set_log_level_debug()\n",
     "mzml_filename = 'ms1_controller.mzML'\n",
-    "env.write_mzML(os.getcwd(), mzml_filename)"
+    "out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "env.write_mzML(out_dir, mzml_filename)"
    ]
   }
  ],
