--- a/demo/02. Methods/04. SmartROI.ipynb
+++ b/demo/02. Methods/04. SmartROI.ipynb
@@ -78,9 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data')\n",
-    "dataset = load_obj(os.path.join(data_dir, 'QCA_22May19_1.p'))\n",
-    "ps = load_obj(os.path.join(data_dir, 'ps.p'))"
+    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data','example_data')\n",
+    "dataset = load_obj(os.path.join(data_dir, 'beers', 'datasets', 'beer_1.p'))\n",
+    "ps = load_obj(os.path.join(data_dir, 'peak_sampler_mz_rt_int_19_beers_fragmentation.p'))"
    ]
   },
   {
@@ -143,7 +143,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1441.684s) ms_level=1 N=10 DEW=15: 100%|████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.951598983462/1440 [00:15<00:00, 93.13it/s]\n"
+      "(1440.141s) ms_level=1 N=10 DEW=15: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.8732919999936/1440 [02:30<00:00,  9.58it/s]\n"
      ]
     }
    ],
@@ -174,15 +174,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-16 18:41:23.842 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\smartroi_controller.mzML\n",
-      "2020-07-16 18:41:31.111 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-07-17 16:54:48.122 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\smartroi_controller.mzML\n",
+      "2020-07-17 16:57:41.863 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
      ]
     }
    ],
    "source": [
     "set_log_level_debug()\n",
     "mzml_filename = 'smartroi_controller.mzML'\n",
-    "env.write_mzML(os.getcwd(), mzml_filename)"
+    "out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "env.write_mzML(out_dir, mzml_filename)"
    ]
   }
  ],
