--- a/demo/02. Methods/06. Purity.ipynb
+++ b/demo/02. Methods/06. Purity.ipynb
@@ -78,9 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data')\n",
-    "dataset = load_obj(os.path.join(data_dir, 'QCA_22May19_1.p'))\n",
-    "ps = load_obj(os.path.join(data_dir, 'ps.p'))"
+    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data','example_data')\n",
+    "dataset = load_obj(os.path.join(data_dir, 'beers', 'datasets', 'beer_1.p'))\n",
+    "ps = load_obj(os.path.join(data_dir, 'peak_sampler_mz_rt_int_19_beers_fragmentation.p'))"
    ]
   },
   {
@@ -150,7 +150,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.640s) ms_level=1 N=10 DEW=30: 100%|███████████████████████████████████████████████████████████████████████████████████████████████▉| 1438.9240502811604/1440 [00:31<00:00, 45.14it/s]\n"
+      "(1440.009s) ms_level=2 N=10 DEW=30: 100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.9365159999988/1440 [02:25<00:00,  9.92it/s]\n"
      ]
     }
    ],
@@ -181,15 +181,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-16 18:49:23.517 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\purity_controller.mzML\n",
-      "2020-07-16 18:49:37.463 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-07-17 17:02:09.231 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\purity_controller.mzML\n",
+      "2020-07-17 17:05:06.790 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
      ]
     }
    ],
    "source": [
     "set_log_level_debug()\n",
     "mzml_filename = 'purity_controller.mzML'\n",
-    "env.write_mzML(os.getcwd(), mzml_filename)"
+    "out_dir = os.path.join(os.getcwd(), 'results')\n",
+    "env.write_mzML(out_dir, mzml_filename)"
    ]
   }
  ],
