computing optimal performance

--- a/experimental/MakeGraph.ipynb
+++ b/experimental/MakeGraph.ipynb
@@ -31,32 +31,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "import bisect"
+    "import bisect\n",
+    "\n",
+    "import networkx as nx\n",
+    "import numpy as np\n",
+    "\n",
+    "import pylab as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pymzm_folder = '/Users/simon/git/pymzm'\n",
-    "pymzm_folder = '/home/simon/git/pymzm'\n",
     "vimms_folder = '/home/simon/git/vimms/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sys.path.append(pymzm_folder)\n",
     "sys.path.append(vimms_folder)"
    ]
   },
@@ -69,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,17 +90,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
     "min_rt = 0 # start value\n",
     "max_rt = 26*60 # end value\n",
-    "topn_time_dict = {1: 0.60,2:0.20} # how long do the different scan types take\n",
     "N = 10 # top-N value\n",
-    "min_ms1_intensity = 1e5 # min intensity for fragmentation\n",
-    "pp_file_path = '/home/simon/git/vimms/experimental/data_20200503/TopN_vs_ROI/from_controller_TopN_QCB_pp.csv'\n",
-    "mzml_file_path = '/home/simon/git/vimms/experimental/data_20200503/TopN_vs_ROI/from_controller_TopN_QCB.mzML'\n",
+    "min_ms1_intensity = 5e3 # min intensity for fragmentation\n",
+    "\n",
+    "mix = 'QCA'\n",
+    "\n",
+    "data_path = '/Users/simon/University of Glasgow/Vinny Davies - CLDS Metabolomics Project/Experimental_Results/20200717_TopN_vs_ROI_rerun/'\n",
+    "\n",
+    "pp_file_path = os.path.join(data_path,mix,'Fullscan_{}_box.csv'.format(mix))\n",
+    "mzml_file_path = os.path.join(data_path,mix,'Fullscan_{}.mzML'.format(mix))\n",
     "verbose = True\n",
     "\n"
    ]
@@ -111,14 +118,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 5667 picked peak boxes\n"
+      "Loaded 4481 picked peak boxes\n"
      ]
     }
    ],
@@ -136,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded 7045 scans\n"
+      "Loaded 3351 scans\n"
      ]
     }
    ],
@@ -155,19 +162,77 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Set up the scan times"
+    "### 2a. Extract timings from mzML files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "timing_file = os.path.join(data_path,mix,'TopN_{}.mzML'.format(mix))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created 6601 scan times and levels\n"
+      "Loaded 6570 scans\n",
+      "0.6354254450181306\n",
+      "0.19914910611384426\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_times(mzfile_object):\n",
+    "    times = {1: [], 2:[]}\n",
+    "    for i,scan in enumerate(mzfile_object.scans[1:]):\n",
+    "        scan_level = mzfile_object.scans[i].ms_level\n",
+    "        elapsed_time = scan.rt_in_seconds  - mzfile_object.scans[i].rt_in_seconds\n",
+    "        if elapsed_time > 0:\n",
+    "            times[scan_level].append(elapsed_time)\n",
+    "    return times\n",
+    "\n",
+    "\n",
+    "times = get_times(MZMLFile(timing_file))\n",
+    "print(np.array(times[1]).mean())\n",
+    "print(np.array(times[2]).mean())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "topn_time_dict = {}\n",
+    "for s,t in times.items():\n",
+    "    topn_time_dict[s] = np.array(t).mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Set up the scan times"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created 6534 scan times and levels\n"
      ]
     }
    ],
@@ -201,21 +266,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 7045\n",
-      "1100 7045\n",
-      "2200 7045\n",
-      "3300 7045\n",
-      "4400 7045\n",
-      "5500 7045\n",
-      "6500 7045\n",
-      "Of 5667 boxes, 5667 have roi\n"
+      "0 3351\n",
+      "100 3351\n",
+      "200 3351\n",
+      "300 3351\n",
+      "400 3351\n",
+      "500 3351\n",
+      "600 3351\n",
+      "700 3351\n",
+      "800 3351\n",
+      "900 3351\n",
+      "1000 3351\n",
+      "1100 3351\n",
+      "1200 3351\n",
+      "1300 3351\n",
+      "1400 3351\n",
+      "1500 3351\n",
+      "1600 3351\n",
+      "1700 3351\n",
+      "1800 3351\n",
+      "1900 3351\n",
+      "2000 3351\n",
+      "2100 3351\n",
+      "2200 3351\n",
+      "2300 3351\n",
+      "2400 3351\n",
+      "2500 3351\n",
+      "2600 3351\n",
+      "2700 3351\n",
+      "2800 3351\n",
+      "2900 3351\n",
+      "3000 3351\n",
+      "3100 3351\n",
+      "3200 3351\n",
+      "3300 3351\n",
+      "Of 4481 boxes, 4481 have roi\n"
      ]
     }
    ],
@@ -264,27 +356,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5656: [465.10211181640625, 465.1034851074219] [8.70962672321667, 8.9482872112] [522.5776033930002, 536.897232672]\n",
-      "[465.1025, 465.10242, 465.1029, 465.10272, 465.1035]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# a little test\n",
-    "box_pos = 2345\n",
-    "print(boxes[box_pos],boxes[box_pos].rt_range_in_seconds)\n",
-    "print(boxes[box_pos].roi.mz_list)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -300,27 +371,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "50310 possible edges found\n"
+      "210205 possible edges found\n"
      ]
     }
    ],
    "source": [
-    "def get_intensity(roi,rt):\n",
+    "def get_intensity(roi,rt,interpolate = False):\n",
     "    if rt < roi.rt_list[0] or rt > roi.rt_list[-1]:\n",
     "        return 0\n",
     "    else:\n",
     "        pos = bisect.bisect_right(roi.rt_list,rt)\n",
     "        before_pos = pos - 1\n",
     "        after_pos = pos\n",
-    "        prop = (rt - roi.rt_list[before_pos])/(roi.rt_list[after_pos] - roi.rt_list[before_pos])\n",
-    "        return roi.intensity_list[before_pos] + prop*(roi.intensity_list[after_pos] - roi.intensity_list[before_pos])\n",
+    "        if interpolate:\n",
+    "            prop = (rt - roi.rt_list[before_pos])/(roi.rt_list[after_pos] - roi.rt_list[before_pos])\n",
+    "            return roi.intensity_list[before_pos] + prop*(roi.intensity_list[after_pos] - roi.intensity_list[before_pos])\n",
+    "        else:\n",
+    "            return roi.intensity_list[before_pos]\n",
     "\n",
     "edges = []\n",
     "\n",
@@ -338,35 +412,122 @@
     "                can_fragment = False\n",
     "        if scan_levels[spo] == 2:\n",
     "            if can_fragment:\n",
-    "                edges.append((spo,peak_id,box))\n",
+    "                edges.append((\"S{}\".format(spo),\"B{}\".format(peak_id),box))\n",
     "        spo += 1\n",
     "print(\"{} possible edges found\".format(len(edges)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scan_names,box_names,_ = zip(*edges)\n",
+    "scanSet = set(scan_names)\n",
+    "boxSet = set(box_names)\n",
+    "reduced_edges = list(zip(scan_names,box_names))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def reducedUnweightedMaxMatchingFromLists(scanSet,boxSet,edgeList):\n",
+    "    G = nx.Graph() #create an empty graph\n",
+    "    G.add_nodes_from(scanSet, bipartite=0) #add both lists of vertices as nodes to graph\n",
+    "    G.add_nodes_from(boxSet, bipartite=1)\n",
+    "    G.add_edges_from(edgeList) # add edges to graph from list\n",
+    "    print('There are {} scans and {} boxes'.format(len(scanSet),len(boxSet)))\n",
+    "    print('There are {} edges in total'.format(len(edgeList)))\n",
+    "    top_nodes = {n for n, d in G.nodes(data=True) if d['bipartite'] == 0} #scans\n",
+    "    matching  = nx.bipartite.matching.hopcroft_karp_matching(G,top_nodes) #call the matching algorithms\n",
+    "    size = 0\n",
+    "    scanList = list(scanSet)\n",
+    "    matchList = [(s,'-') for s in scanList]\n",
+    "\n",
+    "    items_list = list(matching.items())[:len(matching)//2]\n",
+    "\n",
+    "    for scan,box in items_list:\n",
+    "        ind = scanList.index(scan) \n",
+    "        matchList[ind] = (scan, box) #update entry in the matchList\n",
+    "        size=size+1\n",
+    "\n",
+    "    return matchList,size\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "622.0000000000061\n",
-      "[616.203014337, 682.859708143998]\n",
-      "[6218.936, 26377.29, 99240.67, 222041.62, 364949.5, 993382.6, 2865651.8, 12269144.0, 33528114.0, 56799390.0, 77447670.0, 71707464.0, 62696604.0, 58856240.0, 37672884.0, 15446857.0, 6794234.5, 2674198.8, 1574278.9, 941592.7, 662565.06, 400784.7, 338497.75, 246819.2, 219262.45, 161773.52, 78166.08, 68409.41]\n"
+      "There are 5892 scans and 2266 boxes\n",
+      "There are 210205 edges in total\n",
+      "1767\n"
      ]
     }
    ],
    "source": [
-    "edge_pos = 0\n",
-    "scan_pos = edges[edge_pos][0]\n",
-    "box = edges[edge_pos][2]\n",
-    "scan_rt = scan_start_times[scan_pos]\n",
-    "print(scan_rt)\n",
-    "print(box.rt_range_in_seconds)\n",
-    "print(box.roi.intensity_list)"
+    "matchList,size = reducedUnweightedMaxMatchingFromLists(scanSet,boxSet,reduced_edges)\n",
+    "print(size)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -848,15 +1009,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.7.5"
   },
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
