updated file paths after folder move

--- a/examples/01. vimms (Wandy et al 2019)/03. Multiple Samples Example.ipynb
+++ b/examples/01. vimms (Wandy et al 2019)/03. Multiple Samples Example.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('..')"
+    "sys.path.append('../..')"
    ]
   },
   {
