--- a/examples/01. vimms (Wandy et al 2019)/04. Top-N Simulations.ipynb
+++ b/examples/01. vimms (Wandy et al 2019)/04. Top-N Simulations.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('..')"
+    "sys.path.append('../..')"
    ]
   },
   {
