--- a/examples/01. vimms (Wandy et al 2019)/01. Download Data.ipynb
+++ b/examples/01. vimms (Wandy et al 2019)/01. Download Data.ipynb
@@ -61,7 +61,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('..')"
+    "sys.path.append('../..')"
    ]
   },
   {
