--- a/examples/01. vimms (Wandy et al 2019)/02. MS1 Simulations.ipynb
+++ b/examples/01. vimms (Wandy et al 2019)/02. MS1 Simulations.ipynb
@@ -40,7 +40,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.append('..')"
+    "sys.path.append('../..')"
    ]
   },
   {
