--- a/demo/02. Methods/06. Purity.ipynb
+++ b/demo/02. Methods/06. Purity.ipynb
@@ -78,9 +78,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir =  os.path.join(os.path.abspath(os.path.join(os.getcwd(),\"..\")),'01. Data','example_data')\n",
-    "dataset = load_obj(os.path.join(data_dir, 'beers', 'datasets', 'beer_1.p'))\n",
-    "ps = load_obj(os.path.join(data_dir, 'peak_sampler_mz_rt_int_19_beers_fragmentation.p'))"
+    "data_dir = os.path.join(os.path.abspath(os.path.join(os.path.join(os.getcwd(),\"..\"),\"..\")),'tests','integration','fixtures')\n",
+    "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
+    "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fragmentation.p'))"
    ]
   },
   {
