updated file paths to ps

--- a/demo/01. Data/02. Creating data from an existing mzML file.ipynb
+++ b/demo/01. Data/02. Creating data from an existing mzML file.ipynb
@@ -89,8 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_dir = os.path.abspath('example_data')\n",
-    "ps = load_obj(Path(base_dir, 'peak_sampler_mz_rt_int_19_beers_fullscan.p'))"
+    "data_dir = os.path.join(os.path.abspath(os.path.join(os.path.join(os.getcwd(),\"..\"),\"..\")),'tests','integration','fixtures')\n",
+    "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fullscan.p'))"
    ]
   },
   {
