--- a/demo/02. Methods/07. WeightedDEW.ipynb
+++ b/demo/02. Methods/07. WeightedDEW.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Top N"
+    "# 7. WeightedDEW"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook shows how to run the Top-N DDA method on a ViMMS dataset"
+    "This notebook shows how to run the WeightedDEW method on a ViMMS dataset"
    ]
   },
   {
@@ -54,13 +54,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "from vimms.Chemicals import ChemicalCreator\n",
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
-    "from vimms.Controller import TopNController, PurityController\n",
+    "from vimms.Controller import ExcludingTopNController\n",
     "from vimms.Environment import Environment\n",
     "from vimms.Common import *"
    ]
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,99 +92,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rt_range = [(0, 1440)]\n",
-    "min_rt = rt_range[0][0]\n",
-    "max_rt = rt_range[0][1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "isolation_window = 1\n",
-    "N = 3\n",
-    "rt_tol = 15\n",
-    "mz_tol = 10\n",
-    "min_ms1_intensity = 1.75E5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
-    "controller = TopNController(POSITIVE, N, isolation_window, mz_tol, rt_tol, min_ms1_intensity)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "(1440.130s) ms_level=2 N=3 DEW=15: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.9968469999974/1440 [02:33<00:00,  9.36it/s]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# create an environment to run both the mass spec and controller\n",
-    "env = Environment(mass_spec, controller, min_rt, max_rt, progress_bar=True)\n",
-    "\n",
-    "# set the log level to WARNING so we don't see too many messages when environment is running\n",
-    "set_log_level_warning()\n",
-    "\n",
-    "# run the simulation\n",
-    "env.run()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Simulated results are saved to the following .mzML file and can be viewed in tools like ToppView or using other mzML file viewers."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2020-07-17 16:47:05.549 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\topn_controller.mzML\n",
-      "2020-07-17 16:49:59.376 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
-     ]
-    }
-   ],
-   "source": [
-    "set_log_level_debug()\n",
-    "mzml_filename = 'topn_controller.mzML'\n",
-    "out_dir = os.path.join(os.getcwd(), 'results')\n",
-    "env.write_mzML(out_dir, mzml_filename)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Run Top-N Controller with varied N and RT tolerance (DEW)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -196,38 +103,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ionisation_mode = POSITIVE\n",
-    "isolation_window = [1, 1.1, 1.2, 1.3]\n",
-    "N = [5, 10, 15, 20]\n",
-    "rt_tol = [15, 30, 60, 120]\n",
-    "mz_tol = [10, 5, 15, 20]\n",
-    "scan_param_changepoints = [300, 600, 900]"
+    "min_ms1_intensity = 5000\n",
+    "mz_tol = 10\n",
+    "r = 20\n",
+    "N = 10\n",
+    "t0 = 20\n",
+    "\n",
+    "isolation_width = 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
-    "controller = PurityController(POSITIVE, N, scan_param_changepoints, isolation_window, mz_tol, rt_tol, min_ms1_intensity)"
+    "controller = ExcludingTopNController(POSITIVE, N, isolation_width, mz_tol, \n",
+    "                                            r,min_ms1_intensity, exclusion_t_0 = t0, log_intensity = True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "(1440.055s) ms_level=1 N=20 DEW=120: 100%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.7351859999885/1440 [02:50<00:00,  8.46it/s]\n"
+      "(1440.000s) ms_level=2 N=10 DEW=20: 100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉| 1439.800000000147/1440 [00:45<00:00, 31.38it/s]\n"
      ]
     }
    ],
@@ -251,21 +160,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-17 16:52:50.130 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\topnvaried_controller.mzML\n",
-      "2020-07-17 16:52:57.556 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
+      "2020-07-30 15:30:38.684 | DEBUG    | vimms.Environment:write_mzML:161 - Writing mzML file to C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\\weighteddew_controller.mzML\n",
+      "2020-07-30 15:30:38.685 | INFO     | vimms.Common:create_if_not_exist:52 - Created C:\\Users\\Vinny\\work\\vimms\\demo\\02. Methods\\results\n",
+      "2020-07-30 15:31:01.099 | DEBUG    | vimms.Environment:write_mzML:168 - mzML file successfully written!\n"
      ]
     }
    ],
    "source": [
     "set_log_level_debug()\n",
-    "mzml_filename = 'topnvaried_controller.mzML'\n",
+    "mzml_filename = 'weighteddew_controller.mzML'\n",
     "out_dir = os.path.join(os.getcwd(), 'results')\n",
     "env.write_mzML(out_dir, mzml_filename)"
    ]
