--- a/demo/01. Data/01. Creating a chromatogram and fragment pickle file from an mzML.ipynb
+++ b/demo/01. Data/01. Creating a chromatogram and fragment pickle file from an mzML.ipynb
@@ -88,9 +88,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2020-07-30 17:16:51.977 | INFO     | vimms.Common:download_file:184 - Downloading example_data.zip\n",
+      "  0%|                                                                                                                                                                                                            | 0.00/869k [00:00<?, ?KB/s]"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -102,11 +110,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2020-07-17 16:07:33.659 | INFO     | vimms.Common:download_file:180 - Downloading example_data.zip\n",
-      "869kKB [01:59, 7.26kKB/s]                                                                                                                                                                                                                    \n",
-      "2020-07-17 16:09:33.340 | INFO     | vimms.Common:extract_zip_file:192 - Extracting example_data.zip\n",
-      "100%|██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 110/110 [00:16<00:00,  6.65it/s]\n",
-      "2020-07-17 16:09:49.904 | INFO     | vimms.Common:extract_zip_file:198 - Deleting example_data.zip\n"
+      " 84%|████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████▉                               | 731k/869k [01:55<00:16, 8.32kKB/s]"
      ]
     }
    ],
@@ -143,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
