--- a/demo/02. Methods/01. Full Scan.ipynb
+++ b/demo/02. Methods/01. Full Scan.ipynb
@@ -78,7 +78,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_dir = os.path.join(os.path.abspath(os.path.join(os.path.join(os.getcwd(),\"..\"),\"..\")),'tests','integration','fixtures')\n",
+    "data_dir = os.path.abspath(os.path.join(os.getcwd(),'..','..','tests','integration','fixtures'))\n",
     "dataset = load_obj(os.path.join(data_dir, 'QCB_22May19_1.p'))\n",
     "ps = load_obj(Path(data_dir,'peak_sampler_mz_rt_int_beerqcb_fullscan.p'))"
    ]
