Removed unused imports, fixed the import from FeatureExtraction

--- a/demo/01. Data/02. Creating data from an existing mzML file.ipynb
+++ b/demo/01. Data/02. Creating data from an existing mzML file.ipynb
@@ -32,8 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "import glob"
+    "from pathlib import Path"
    ]
   },
   {
@@ -52,11 +51,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from vimms.DataGenerator import extract_hmdb_metabolite, get_data_source, get_spectral_feature_database\n",
-    "from vimms.MassSpec import IndependentMassSpectrometer\n",
-    "from vimms.Controller import SimpleMs1Controller\n",
     "from vimms.Common import *\n",
-    "from vimms.Roi import make_roi, RoiToChemicalCreator, extract_roi"
+    "from vimms.FeatureExtraction import  extract_roi"
    ]
   },
   {
