Tidied up controller codes: - Auto-reformat all the python files - Further separated controller classes into base.py, fullscan.py and misc.py - Moved the base Controller class into base.py - Moved the MS1 controller into fullscan.py - Moved (unused?) ScanParameterController and FixedScheduleController into misc.py - Renamed ExcludingTopNController to WeightedDEWController

--- a/demo/02. Methods/07. WeightedDEW.ipynb
+++ b/demo/02. Methods/07. WeightedDEW.ipynb
@@ -59,7 +59,7 @@
    "outputs": [],
    "source": [
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
-    "from vimms.Controller import ExcludingTopNController\n",
+    "from vimms.Controller import WeightedDEWController\n",
     "from vimms.Environment import Environment\n",
     "from vimms.Common import *"
    ]
@@ -122,7 +122,7 @@
    "outputs": [],
    "source": [
     "mass_spec = IndependentMassSpectrometer(POSITIVE, dataset, ps)\n",
-    "controller = ExcludingTopNController(POSITIVE, N, isolation_width, mz_tol, \n",
+    "controller = WeightedDEWController(POSITIVE, N, isolation_width, mz_tol, \n",
     "                                            r,min_ms1_intensity, exclusion_t_0 = t0, log_intensity = True)"
    ]
   },
