--- a/examples/02. DDA Strategies (Davies et al 2020)/01. Model Optimisation.ipynb
+++ b/examples/02. DDA Strategies (Davies et al 2020)/01. Model Optimisation.ipynb
@@ -48,7 +48,7 @@
    "source": [
     "from vimms.PythonMzmine import *\n",
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
-    "from vimms.Controller import TopNController,ExcludingTopNController\n",
+    "from vimms.Controller import TopNController,WeightedDEWController\n",
     "from vimms.PythonMzmine import *"
    ]
   },
@@ -492,7 +492,7 @@
     "            print(\"Already done\")\n",
     "            continue\n",
     "        \n",
-    "        controller = ExcludingTopNController(ionisation_mode, N, isolation_width, mz_tol, \n",
+    "        controller = WeightedDEWController(ionisation_mode, N, isolation_width, mz_tol, \n",
     "                                            r,min_ms1_intensity, exclusion_t_0 = t0, log_intensity = True)\n",
     "\n",
     "        mass_spec = IndependentMassSpectrometer(ionisation_mode, WeightedDEW_QCA_dataset,\n",
@@ -573,7 +573,7 @@
     "            print(\"Already done\")\n",
     "            continue\n",
     "        \n",
-    "        controller = ExcludingTopNController(ionisation_mode, N, isolation_width, mz_tol, \n",
+    "        controller = WeightedDEWController(ionisation_mode, N, isolation_width, mz_tol, \n",
     "                                            r,min_ms1_intensity, exclusion_t_0 = t0, log_intensity = True)\n",
     "\n",
     "        mass_spec = IndependentMassSpectrometer(ionisation_mode, WeightedDEW_QCB_dataset,\n",
