--- a/experimental/ExcludedSimulations.ipynb
+++ b/experimental/ExcludedSimulations.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "from vimms.PythonMzmine import *\n",
     "from vimms.MassSpec import IndependentMassSpectrometer\n",
-    "from vimms.Controller import TopNController,ExcludingTopNController\n",
+    "from vimms.Controller import TopNController,WeightedDEWController\n",
     "from vimms.PythonMzmine import *"
    ]
   },
@@ -494,7 +494,7 @@
     "        \n",
     "        # ROI can also be fragmented again if intensity falls to <1% of the max *since* last fragmentation\n",
     "        from vimms.Controller import TopN_SmartRoiController\n",
-    "        controller = ExcludingTopNController(ionisation_mode, N, isolation_width, mz_tol, \n",
+    "        controller = WeightedDEWController(ionisation_mode, N, isolation_width, mz_tol, \n",
     "                                            r,min_ms1_intensity, exclusion_t_0 = t0, log_intensity = True)\n",
     "\n",
     "        mass_spec = IndependentMassSpectrometer(ionisation_mode, TopN_QCB_dataset,\n",
